# PortalPad

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/hardware/display/: IVirtualDisplayCallback.aidl
app/src/main/aidl/com/portalpad/app/service/: IShellService.aidl
app/src/main/cpp/: CMakeLists.txt  portalpad_mouse.cpp
app/src/main/java/com/portalpad/app/: DisplayUtil.kt  GestureInkRecognizer.kt  KeyboardRelayActivity.kt  MainActivity.kt  MicPermissionActivity.kt  OrientationLock.kt  PinnedDensityActivity.kt  PortalPadApp.kt  ScreenRecorder.kt  SearchActivity.kt  TrackpadActivity.kt  WallpaperActivity.kt  WidgetSearchActivity.kt
app/src/main/java/com/portalpad/app/data/: AppEntry.kt  BackupManager.kt  BackupWorker.kt  ButtonStyle.kt  DockItem.kt  GestureAction.kt  IconPackManager.kt  NotificationItem.kt  PreferencesRepository.kt  RunningTask.kt  SideMode.kt  Wallpaper.kt  WidgetOverlayConfig.kt
app/src/main/java/com/portalpad/app/diag/: LogTags.kt  LogcatActivity.kt  LogcatStreamer.kt
app/src/main/java/com/portalpad/app/presentation/: DockOverlay.kt  (+20 more)
app/src/main/res/drawable/: avd_splash_logo.xml  ic_github.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_playstore.xml  ic_screenshot.xml  splash_background.xml  splash_logo.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  file_provider_paths.xml
(+72 files in other folders)
